--- a/cart.html
+++ b/cart.html
@@ -272,6 +272,67 @@
 
     </section>
 
+    <section id="#Contacts">
+
+        <div>
+            <h2 class="title_galeries"> Contact Me ! </h2>
+
+        </div>
+        <br>
+
+        <form class="formulaire">
+            <div class="fr">
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address de</label>
+                </div>
+
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" value="www.ronaldojason2001@gmail.com">
+                    <label for="floatingInput">à</label>
+                </div>
+
+
+            </div>
+
+            <div class="fr">
+
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="fist name">
+                    <label for="floatingInput">fist name</label>
+                </div>
+
+                <div class="form-floating">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="obejct message">
+                    <label for="floatingInput">Object</label>
+                </div>
+            </div>
+
+
+
+            <div class="fr">
+
+
+                <div class="form-floating">
+                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Email address</label>
+                </div>
+
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                    <label for="floatingTextarea">write Messages :</label>
+                </div>
+            </div>
+
+            <div class="col-0">
+                <button class="btn btn-orange" type="submit">Send</button>
+            </div>
+
+
+        </form>
+
+    </section>
+
 
 
 
@@ -406,7 +467,7 @@
     <!-- End of .container -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        integrity="sha384- YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 
 </body>
